Fix svg and lunch info alignment
* Rename presidents day svg to align with naming conventions
* Adjust line-height and spacing of upcoming event/lunch info

--- a/css/less/upcoming.less
+++ b/css/less/upcoming.less
@@ -52,8 +52,7 @@
 			display: inline-block;
 			float: left;
 			height: 50px;
-			margin-right: 50px;
-			margin-top: 15px;
+			margin: 15px 50px 20px 0;
 			width: 46px;
 		}
 		h2 {
@@ -70,8 +69,9 @@
 			color: white;
 			font-size: 20px;
 			font-weight: normal;
-			line-height: 1;
-			margin: 0
+			line-height: 1.2;
+			margin: 0;
+			text-align: left;
 		}
 	}
 }
